Fixed wierd right side whitespace and commented out terminal

--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html, body {
+    overflow-x: hidden;
+}
 .jumbotron {
     background: black;
     color: white;
